--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: Goni Halevi
-description: educator \& computational astrophysicist
+description: educator & computational astrophysicist
 # Google Analytics
 google_analytics: UA-123638175-1
 
